--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </div>
               <div class="col">
                 <div class="card h-80 shadow-sm p-5">
-                  <img class="jacket htn" src="photos/1282271-14-revolution-checkpoint-friendly-backpack-teb012us-backpacks-laptop-bags-targus-backpack-png-1200_1200 1.png" class="card-img-top" alt="...">
+                  <img class="jacket htn" src="photos/school-bag.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title title-color"> School backpack </h5>
                     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
