--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <section class="container mt-5 adjust-card">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h1 class="title-color ">WOMEN JACKET</h1>
+            <h1 class="title-color ">TRAVEL BACKPACK</h1>
   
           </div>
         </div>
@@ -132,7 +132,7 @@
                 <div class="card h-80 shadow-sm p-5">
                   <img class="jacket" src="Photos/kisspng-backpacking-travel-hiking-osprey-5b566542cd5807 1.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title title-color">Yellow Coat Jacket </h5>
+                    <h5 class="card-title title-color">Travel sport </h5>
                     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                   </div>
                   <div class=" item-footer d-flex justify-content-between">
@@ -146,7 +146,7 @@
                 <div class="card h-80 shadow-sm p-5">
                   <img class="jacket htn" src="Photos/pngwing 2.png"class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title title-color">Ladies Jacket </h5>
+                    <h5 class="card-title title-color">Jack wolfskin west </h5>
                     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                   </div>
                   <div class=" item-footer d-flex justify-content-between">
@@ -160,7 +160,7 @@
                 <div class="card h-80 shadow-sm p-5">
                   <img class="jacket " src="Photos/pngwing 3.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title title-color">Woman Leather Jacket 
+                    <h5 class="card-title title-color">Hiking trekking bag
                     </h5>
                     <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                   </div>
